--- a/app/views/locomotive/pages/form/_main.html.slim
+++ b/app/views/locomotive/pages/form/_main.html.slim
@@ -22,6 +22,8 @@
 
   = f.input :published, as: :toggle
 
+  = f.input :searchable, as: :toggle
+
   - if !@page.not_found? && !@page.templatized? && @page.default_response_type?
 
     = f.input :listed, as: :toggle
